<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtName"
                android:text="@string/welcome_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <Button
                android:id="@+id/btnTown"
                android:text="@string/town"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnDate"
                android:text="@string/date"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnNumberPerson"
                android:text="@string/number_person"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnSearch"
                android:text="@string/find"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>